--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,15 @@ after_success:
     - docker push jschweihs/multi-nginx
     - docker push jschweihs/multi-server
     - docker push jschweihs/multi-worker
+
+deploy:
+    provider: elasticbeanstalk
+    region: us-east-2
+    app: multi-docker
+    env: MultiDocker-env
+    bucket_name: elasticbeanstalk-us-east-2-012185790721
+    bucket_path: docker-multi
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
